@@ -1,6 +1,7 @@
 Trunk
 - Fixed bug #61: Nested template inheritance not correctly placing blocks (Dave Glick)
 - Feature #63: Added startswith and endswith conditions for arrays and strings (Dave Glick)
+- Feature #64: Implemented ERB-like trimming for leading whitespace
 
 v1.7.0 - 2012-08-03
 - Fixed bug: Handle negative result from GetHashCode (thanks Sam Listopad)
